; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-802_11.c_handle_disassoc.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/tcpdump/extr_print-802_11.c_handle_disassoc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mgmt_body_t = type { i64 }

@IEEE802_11_REASON_LEN = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [5 x i8] c": %s\00", align 1
@NUM_REASONS = common dso_local global i64 0, align 8
@reason_text = common dso_local global i8** null, align 8
@.str.1 = private unnamed_addr constant [9 x i8] c"Reserved\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*, i64)* @handle_disassoc to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @handle_disassoc(i32* %0, i32* %1, i64 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i64, align 8
  %8 = alloca %struct.mgmt_body_t, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i64 %2, i64* %7, align 8
  %9 = call i32 @memset(%struct.mgmt_body_t* %8, i32 0, i32 8)
  %10 = load i32*, i32** %6, align 8
  %11 = load i32, i32* %10, align 4
  %12 = load i64, i64* @IEEE802_11_REASON_LEN, align 8
  %13 = call i32 @ND_TTEST2(i32 %11, i64 %12)
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %16, label %15

15:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %41

16:                                               ; preds = %3
  %17 = load i64, i64* %7, align 8
  %18 = load i64, i64* @IEEE802_11_REASON_LEN, align 8
  %19 = icmp slt i64 %17, %18
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  store i32 0, i32* %4, align 4
  br label %41

21:                                               ; preds = %16
  %22 = load i32*, i32** %6, align 8
  %23 = call i64 @EXTRACT_LE_16BITS(i32* %22)
  %24 = getelementptr inbounds %struct.mgmt_body_t, %struct.mgmt_body_t* %8, i32 0, i32 0
  store i64 %23, i64* %24, align 8
  %25 = load i32*, i32** %5, align 8
  %26 = getelementptr inbounds %struct.mgmt_body_t, %struct.mgmt_body_t* %8, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = load i64, i64* @NUM_REASONS, align 8
  %29 = icmp ult i64 %27, %28
  br i1 %29, label %30, label %36

30:                                               ; preds = %21
  %31 = load i8**, i8*** @reason_text, align 8
  %32 = getelementptr inbounds %struct.mgmt_body_t, %struct.mgmt_body_t* %8, i32 0, i32 0
  %33 = load i64, i64* %32, align 8
  %34 = getelementptr inbounds i8*, i8** %31, i64 %33
  %35 = load i8*, i8** %34, align 8
  br label %37

36:                                               ; preds = %21
  br label %37

37:                                               ; preds = %36, %30
  %38 = phi i8* [ %35, %30 ], [ getelementptr inbounds ([9 x i8], [9 x i8]* @.str.1, i64 0, i64 0), %36 ]
  %39 = bitcast i8* %38 to i32*
  %40 = call i32 @ND_PRINT(i32* %39)
  store i32 1, i32* %4, align 4
  br label %41

41:                                               ; preds = %37, %20, %15
  %42 = load i32, i32* %4, align 4
  ret i32 %42
}

declare dso_local i32 @memset(%struct.mgmt_body_t*, i32, i32) #1

declare dso_local i32 @ND_TTEST2(i32, i64) #1

declare dso_local i64 @EXTRACT_LE_16BITS(i32*) #1

declare dso_local i32 @ND_PRINT(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
